--- a/Estudos/Html e CSS/Exercicios/ex003/index.html
+++ b/Estudos/Html e CSS/Exercicios/ex003/index.html
@@ -23,6 +23,13 @@
         &#x267A
         &#x1F407
     </p>
+    <h2>Colocando imagens</h2>
+    <p>
+        você vai ver uma imagens que esta na mesma pasta
+        <img src="northern-forest650.jpg" alt="Paisagem">
+
+        <img src="pngwing.com400.png" alt="logo">
+    </p>
     
 </body>
 </html>
