--- a/Estudos/Html e CSS/Exercicios/ex003/index.html
+++ b/Estudos/Html e CSS/Exercicios/ex003/index.html
@@ -25,10 +25,11 @@
     </p>
     <h2>Colocando imagens</h2>
     <p>
-        você vai ver uma imagens que esta na mesma pasta
-        <img src="northern-forest650.jpg" alt="Paisagem">
-
-        <img src="pngwing.com400.png" alt="logo">
+        você vai ver uma imagens que esta na mesma pasta <br>
+        <img src="imagens/northern-forest650.jpg" alt="Paisagem">
+        <br>
+        <img src="imagens/pngwing.com400.png" alt="logo">
+        <img src="https://www.pikpng.com/pngl/m/520-5208678_umbrella-corporation-logo-4x4-color-patch-umbrella-corporation.png" alt="logo">
     </p>
     
 </body>
