--- a/Estudos/Html e CSS/Exercicios/ex009/index.html
+++ b/Estudos/Html e CSS/Exercicios/ex009/index.html
@@ -22,6 +22,46 @@
         <li>Leite</li>
         <li>Tomate</li>
     </ul>
-    
+    <h2>Minas linguagens favoritas</h2>
+    <ol>
+        <li>Antigas</li>
+        <ol type="a">
+            <li>Fortran 90</li>
+            <li>C</li>
+        </ol>
+        <li>Novas</li>
+        <ol type="a" start="3">
+            <li>python</li>
+            <li>C#</li>
+        </ol>
+    </ol>
+    <h2>Meu jogos favoritos</h2>
+    <ol>
+        <li>Plystatio</li>
+        <ul>
+            <li>Mortal combate</li>
+            <li>Gta</li>
+        </ul>
+        <li>Nitendo</li>
+        <ul>
+            <li>Pokémom</li>
+        </ul>
+        <li>Pc</li>
+        <ul>
+            <li>Age of empires 3</li>
+            <li>Kerbal Space program</li>
+            <li>Oxygen not included</li>
+            <li>Outlive</li>
+        </ul>
+    </ol>ul
+    <h2>Lista de definição</h2>
+    <dl>
+        <dt>Html</dt>
+        <dd>Linguagen de marcação para a criação do conteudo de um site</dd>
+        <dt>Css</dt>
+        <dd>Linguagen de marcação para a criação do disign de um site</dd>
+        <dt>Java Script</dt>
+        <dd>Linguagen de programação para criação da interatividae de um site</dd>
+    </dl>
 </body>
 </html>
