--- a/Estudos/Html e CSS/Exercicios/desafios/Desafio 2/index.html
+++ b/Estudos/Html e CSS/Exercicios/desafios/Desafio 2/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="imagens/favicon (2).ico" type="image/x-icon">
     <title>Document</title>
 </head>
 <body>
     <h1>Desafio das Imagens</h1>
     <img src="imagens/pudim.png" alt="Imagen de um pudin" width="600">
+    
     
 </body>
 </html>
