--- a/Estudos/Html e CSS/Exercicios/ex0018/fonte002.html
+++ b/Estudos/Html e CSS/Exercicios/ex0018/fonte002.html
@@ -8,15 +8,15 @@
     <style>
         @font-face {
             font-family: vanpire-wars;
-            src: url("Vampire\ Wars.ttf") format("truetype"),
-            url('Vampire\ Wars Italic.otf') format("opentype");
+            src: url("fonts/Vampire\ Wars.ttf") format("truetype"),
+            url('fonts/Vampire\ Wars Italic.otf') format("opentype");
             font-weight: normal;
             font-style: normal;
         }
 
         @font-face {
             font-family: land;
-            src: url('Enchanted\ Land.otf') format('opentype');
+            src: url('fonts/Enchanted\ Land.otf') format('opentype');
             font-weight: normal;
         }
 
