--- a/Estudos/Html e CSS/Exercicios/ex0021/caixa03.html
+++ b/Estudos/Html e CSS/Exercicios/ex0021/caixa03.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            border: 25px solid black;
+            padding: 10px;
+            border-image: url('personalizado.png');
+            border-image-repeat: repeat;
+            border-image-slice: 29;
+        }
+    </style>
 </head>
 <body>
-    <h1></h1>
+    <h1>Boordas personalizadas</h1>
     
 </body>
 </html>
