--- a/S-Exemplo/site.html
+++ b/S-Exemplo/site.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Primeiro site em repositorio</h1>
-    <hr>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non facilis vero, nihil ipsam ab recusandae rem atque ipsum rerum optio natus beatae quisquam enim iusto assumenda omnis temporibus! Culpa, voluptas!</p>
+    <header>
+
+    </header>
+    <nav>
+
+    </nav>
+    <main>
+        <article>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, ab libero. Eos dolore illum natus. Architecto exercitationem, odio officiis quis consequatur consectetur reiciendis dolorum modi ab. Hic quas explicabo quia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas tempore aspernatur esse vitae. Adipisci, autem. Sed ratione possimus molestias, pariatur alias eaque at aspernatur nulla modi quia velit id! Quibusdam.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta voluptas excepturi architecto illo beatae qui facilis placeat, aliquid omnis harum natus a assumenda autem laboriosam nulla modi temporibus quae obcaecati! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque veritatis impedit laborum reprehenderit fugiat libero tenetur nam cumque! Officiis tempora quas molestias quia adipisci distinctio animi explicabo optio cum eligendi.
+            </p>
+        </article>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
