--- a/Estudos/Html e CSS/Exercicios/desafios/Desafio12/index.html
+++ b/Estudos/Html e CSS/Exercicios/desafios/Desafio12/index.html
@@ -13,7 +13,7 @@
         <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
     </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -25,7 +25,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagen">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -37,8 +37,8 @@
         </p>
     </section>
 
-    <section>
-        <p>
+    <section class="normal">
+        <p class="margen">
             Arroba agora não pesa <br>
             É parte de um endereço <br>
             Ponto final nem se usa <br>
@@ -58,7 +58,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagen">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -70,8 +70,8 @@
         </p>
     </section>
 
-    <section>
-        <p>
+    <section class="normal">
+        <p class="margen">
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
             Mas quando vou prosear <br>
@@ -89,7 +89,7 @@
             Seus lábios são aparelhos <br>
             Deixe que Deus interprete.
         </p>
-    </sect
+    </section>
     <footer>
         <p>Site criado por <a href="https://github.com/gustavoguanabara/html-css" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/cursoemvideo/playlists" target="_blank">CursoemVideo</a>.</p>
     </footer>
