--- a/Estudos/Html e CSS/Exercicios/ex0023/index.html
+++ b/Estudos/Html e CSS/Exercicios/ex0023/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha primeira tabela</title>
     <style>
-        table{
+        table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
         tr.linha {
@@ -16,14 +17,20 @@
         td {
             border: 1px solid black;
             padding: 3px;
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .numero {
+            text-align: right;
         }
     </style>
 </head>
 <body>
     <table>
         <tr class="linha"> <td>A1</td> <td>B1</td> <td>C1</td> </tr>
-        <tr> <td>A2</td> <td>B2</td> <td>C2</td> </tr>
-        <tr class="linha"> <td>A3</td> <td>B3</td> <td>C3</td> </tr>
+        <tr> <td>A2</td> <td>B2</td> <td  class="numero">C2</td> </tr>
+        <tr class="linha" > <td>A3</td> <td>B3</td> <td class="numero">C3</td> </tr>
         <tr> <td>A4</td> <td>B4</td> <td>C4</td> </tr>
     </table>    
 </body>
