--- a/Estudos/Html e CSS/Exercicios/ex0023/tabela002.html
+++ b/Estudos/Html e CSS/Exercicios/ex0023/tabela002.html
@@ -30,6 +30,7 @@
     <h1>Tabelas grandes</h1>
     <!--
         Anatomia das tabelas grandes
+        CAAPITION
         THED
             TR, TD, TH
         TBODY
@@ -38,11 +39,12 @@
             TR, TD, TH
     -->
     <table>
+        <caption>População das unidades federativas</caption>
         <thead>
             <tr>
-                <th>posição</th>
-                <th>Unidade federativa</th>
-                <th>População</th>
+                <th scope="col">posição</th>
+                <th scope="col">Unidade federativa</th>
+                <th scope="col">População</th>
             </tr>
         </thead>
         <tbody>
@@ -99,7 +101,7 @@
             
         </tbody>
         <tfoot>      
-            <th>total de habitantes</th>
+            <th scope="row">total de habitantes</th>
             <td>-------</td>
             <td>0000</td>
         </tfoot>
