--- a/Estudos/Html e CSS/Exercicios/ex0023/index.html
+++ b/Estudos/Html e CSS/Exercicios/ex0023/index.html
@@ -30,7 +30,7 @@
     <table>
         <tr class="linha"> <td>A1</td> <td>B1</td> <td>C1</td> </tr>
         <tr> <td>A2</td> <td>B2</td> <td  class="numero">C2</td> </tr>
-        <tr class="linha" > <td>A3</td> <td>B3</td> <td class="numero">C3</td> </tr>
+        <tr class="linha" > <td>A3</td> <td>B3</td> <td class="numero]">C3</td> </tr>
         <tr> <td>A4</td> <td>B4</td> <td>C4</td> </tr>
     </table>    
 </body>
