--- a/Estudos/Html e CSS/Exercicios/ex0023/tabela002.html
+++ b/Estudos/Html e CSS/Exercicios/ex0023/tabela002.html
@@ -8,6 +8,10 @@
             width: 500px;
             border-collapse: collapse;
         }
+        caption{
+            font-size: 20px;
+            color: rgb(83, 83, 83);
+        }
         thead, tfoot {
             background-color: rgb(161, 161, 161);
             color: rgb(255, 255, 255);
@@ -18,7 +22,8 @@
         }
         .num{
             text-align: right;
-        }  
+        }
+          
     </style>
 <head>
     <meta charset="UTF-8">
@@ -42,9 +47,10 @@
         <caption>População das unidades federativas</caption>
         <thead>
             <tr>
-                <th scope="col">posição</th>
+                <th scope="col" style="width: 150px">posição</th>
                 <th scope="col">Unidade federativa</th>
-                <th scope="col">População</th>
+                <th scope="col" style="
+                width: 100px">População</th>
             </tr>
         </thead>
         <tbody>
