--- a/Estudos/Html e CSS/Exercicios/ex0023/tabela002.html
+++ b/Estudos/Html e CSS/Exercicios/ex0023/tabela002.html
@@ -16,6 +16,10 @@
             background-color: rgb(161, 161, 161);
             color: rgb(255, 255, 255);
         }
+
+        tbody > tr:nth-child(2n) {/*2n-1 ou 2n*/
+            background-color: lightgray;
+        }
         td, th{
             border: 1px solid black;
             padding: 5px;
