--- a/Estudos/Html e CSS/Exercicios/ex0023/tabela002.html
+++ b/Estudos/Html e CSS/Exercicios/ex0023/tabela002.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>tabelas grandes</title>
     <style>
         body{
 
@@ -26,14 +31,8 @@
         }
         .num{
             text-align: right;
-        }
-          
+        }   
     </style>
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tabelas grandes</title>
 </head>
 <body>
     <h1>Tabelas grandes</h1>
