--- a/Estudos/Html e CSS/Exercicios/desafios/Desafio13/tabela2.html
+++ b/Estudos/Html e CSS/Exercicios/desafios/Desafio13/tabela2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabela1</title>
+    <title>Tabela 2</title>
     <style>
         table{
             width: 300px;
@@ -20,31 +20,28 @@
 <body>
     <table>
         <tr>
-            <td>1</td>
-            <td>2</td>
-            <td rowspan="2">3</td>
-            <td>4</td>
+            <td colspan="4">A</td>
+            <td rowspan="4">B</td>
         </tr>
         <tr>
-            <td>5</td>
-            <td>6</td>
-            <td>7</td>
+            <td rowspan="4">C</td>
+            <td>D</td>
+            <td>E</td>
+            <td>F</td>
         </tr>
         <tr>
-            <td colspan="3">8</td>
-            <td>9</td>
+            <td>G</td>
+            <td>H</td>
+            <td>I</td>
         </tr>
-       <tr>
-           <td rowspan="2">10</td>
-           <td colspan="2">11</td>
-           <td>12</td>
-       </tr>
-       <tr>
-           <td>13</td>
-           <td>14</td>
-           <td>15</td>
-       </tr>
-
+        <tr>
+            <td>J</td>
+            <td>L</td>
+            <td>M</td>
+        </tr>
+        <tr>
+            <td colspan="4">N</td>
+        </tr>
     </table>
     
 </body>
